--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Saad Pasta Portfolio",
-  "name": "Saad Pasta Portfolio",
+  "short_name": "Samyak Gangwal Portfolio",
+  "name": "Samyak Gangwal Portfolio",
   "icons": [
     {
       "src": "/favicon.ico",
@@ -21,5 +21,5 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#6c63ff",
-  "background_color": "#ffffff"
+  "background_color": "#b6f3b4"
 }
