--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,5 +21,5 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#6c63ff",
-  "background_color": "#b6f3b4"
+  "background_color": "#ffffff"
 }
